fix shifting caused by scrollbar, fix overflow issues

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -66,5 +66,6 @@ button:focus-visible {
 }
 
 .md-editor-contenteditable-notes {
+  overflow: auto;
   height: 84vh;
 }
